# big-dipper-2.0-cosmos

./: .codecov.yml  .dockerignore  .env-dev  .env.sample  .eslintignore  .eslintrc.js  .eslintrc.json  .eslintrc.yml  .gitignore  .mergify.yml  .pnp.cjs  .pnp.loader.mjs  .prettierignore  .prettierrc.cjs  .prettierrc.json  .prettierrc.yml  .releaserc.json  .yarnrc.yml  BITSONG_CHANGELOG.md  CHANGELOG.md  CHANGELOG_AGORIC.md  CHANGELOG_AKASH.md  CHANGELOG_ASSETMANTLE.md  CHANGELOG_BAND.md  CHANGELOG_COMDEX.md  CHANGELOG_COSMOS.md  CHANGELOG_CRESCENT.md  CHANGELOG_DESMOS.md  CHANGELOG_EMONEY.md  CHANGELOG_EVMOS.md  CHANGELOG_LIKECOIN.md  CHANGELOG_NOMIC.md  CHANGELOG_OSMOSIS.md  CHANGELOG_PERSISTENCE.md  CHANGELOG_PROVENANCE.md  CHANGELOG_REGEN.md  CHANGELOG_RIZON.md  CHANGELOG_SHENTU.md  CHANGELOG_SIFCHAIN.md  CHANGELOG_TERRA.md  (+31 more)
.changeset/: 20221122-migrated-to-monorepo.md  afraid-camels-dance.md  afraid-poets-visit.md  afraid-tools-give.md  beige-bugs-watch.md  big-tables-beam.md  blue-spoons-report.md  brave-cameras-double.md  brown-dolphins-relax.md  brown-windows-tease.md  calm-dingos-compare.md  config.json  cuddly-buses-protect.md  cuddly-gifts-teach.md  cuddly-turtles-search.md  curvy-lies-eat.md  dry-rules-hear.md  dull-bears-drive.md  dull-chairs-explain.md  dull-geckos-tap.md  early-panthers-smell.md  eight-clouds-guess.md  eleven-ads-double.md  eleven-dryers-rest.md  empty-months-sniff.md  fast-doors-cough.md  few-frogs-hunt.md  fifty-files-occur.md  five-buses-visit.md  five-panthers-bow.md  fluffy-rivers-rule.md  forty-falcons-unite.md  forty-foxes-drop.md  (+86 more)
(+8830 files in other folders)
