[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust wasm package to provide utility functions for use in web browsers"
repository = "https://github.com/forbole/big-dipper-2.0-cosmos.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "packages/rust-wasm/src/lib.rs"

[dependencies]
hex = "0.4.3"
flate2 = "1.0.25"
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[[test]]
name = "tests"
path = "packages/rust-wasm/tests/tests.rs"